# rust-api-init

./: Cargo.toml
src/: main.rs
