[package]
name = "model-to-sql-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
env_logger = "0.9.0"